// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderLabelValueRow > renders correctly 1`] = `
<div
  class="d-flex align-center text-truncate full-width"
>
  <div
    class="shift-view-label mr-1 label-class"
  >
    Test Label: 
  </div>
  <div
    class="text-truncate value-class"
  >
    
    Test Value
    
  </div>
</div>
`;

exports[`HeaderLabelValueRow > renders correctly in larger view 1`] = `
<div
  class="d-flex align-center text-truncate full-width"
>
  <div
    class="shift-view-label mr-1 large-label label-class"
  >
    Test Label: 
  </div>
  <div
    class="text-truncate value-class"
  >
    
    Test Value
    
  </div>
</div>
`;
